--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "less-loader": "^6.0.0",
     "nuxt": "^2.0.0",
     "pug": "^2.0.4",
-    "pug-plain-loader": "^1.0.0"
+    "pug-plain-loader": "^1.0.0",
+    "vue-select": "^3.10.7"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.1.0",
     "vue-jest": "^4.0.0-0"
   }
