--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "countup.js": "^2.0.5",
     "less-loader": "^6.0.0",
     "nuxt": "^2.0.0",
     "pug": "^2.0.4",
